--- a/.virtaal/plugins.ini
+++ b/.virtaal/plugins.ini
@@ -5,6 +5,7 @@ disabled_models = _dummytm,libtranslate,remotetm,tinytm,apertium,google_translat
 
 [lookup]
 backends_dialog_width = 450
+disabled_models = 
 
 [terminology]
 backends_dialog_width = 400
