--- a/.virtaal/tm.ini
+++ b/.virtaal/tm.ini
@@ -1,7 +1,11 @@
+[microsoft_translator]
+
 [currentfile]
 max_length = 1000
 
-[microsoft_translator]
+[amagama]
+host = amagama.locamotion.org
+port = 80
 
 [opentran]
 
