--- a/.virtaal/virtaal.ini
+++ b/.virtaal/virtaal.ini
@@ -3,6 +3,7 @@ targetlang = es
 targetfont = 
 sourcefont = 
 recentlangs = en,es_MX
+uilang = 
 sourcelang = en
 plural = None
 nplurals = 0
@@ -12,14 +13,14 @@ depth = 10000
 
 [general]
 lastdir = 
-windowwidth = 1024
-windowheight = 576
+windowwidth = 1362
+windowheight = 713
 maximized = 
 
 [translator]
-email = javier@i.am
-name = P.L. Javier
-team = 
+email = chilicuil@gmail.com
+name = Javier López
+team = Javier López <chilicuil@gmail.com>
 
 [placeable_state]
 fileplaceable = disabled
