--- a/.irssi/autobleh.conf
+++ b/.irssi/autobleh.conf
@@ -1,16 +1,10 @@
-#
-# bleh configuration file
-# (c)2008-2009 by Juergen Heine <sysdef@debiancenter.org>
-#
-# $Id: autobleh.conf 18 2009-04-24 14:05:45Z sysdef $
-#
+; bleh configuration file
+; (c)2008-2009 by Juergen Heine <sysdef@debiancenter.org>
+; $Id: autobleh.conf 18 2009-04-24 14:05:45Z sysdef $
 
-#
-# af (aka forward bans)
-#
-# example:
-#   #from-channel = #to-channel
-#
+; af (aka forward bans)
+; example:
+;   #from-channel = #to-channel
 
 [forwardban]
 #ubuntu-es = #ubuntu-es-offtopic
