updated virtal settings, translation project

--- a/.virtaal/virtaal.ini
+++ b/.virtaal/virtaal.ini
@@ -12,15 +12,15 @@ nplurals = 0
 depth = 10000
 
 [general]
-lastdir = 
-windowwidth = 1362
-windowheight = 713
+lastdir = /home/chilicuil/misc/translations/klavaro
+windowwidth = 1364
+windowheight = 730
 maximized = 
 
 [translator]
-email = chilicuil@gmail.com
-name = Javier López
-team = Javier López <chilicuil@gmail.com>
+email = chilicuil@ubuntu.com
+name = Francisco Javier P.L.
+team = Spanish <es@li.org>
 
 [placeable_state]
 fileplaceable = disabled
