--- a/.irssi/config
+++ b/.irssi/config
@@ -93,7 +93,7 @@ channels = (
   #{ name = "#fel-clan"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#i3"; chatnet = "tw"; autojoin = "Yes"; },
   { name = "##english-br"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "##espanol-br"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "##espanol-br"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-mx"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#hispania"; chatnet = "an"; autojoin = "Yes"; },
   #{ name = "#opmexico"; chatnet = "an"; autojoin = "Yes"; },
@@ -161,7 +161,6 @@ ignores = (
   { mask = "nando"; level = "ALL"; },
   { mask = "nando_"; level = "ALL"; },
   { mask = "FAMN"; level = "ALL"; },
-  { mask = "FAMM"; level = "ALL"; },
   { mask = "rengo"; level = "ALL"; }
 );
 
