--- a/.gitconfig
+++ b/.gitconfig
@@ -53,3 +53,5 @@
    ;2. When using git pull on the master branch, with no remote and
       ;branch specified, use the default remote (origin) and merge in
       ;the changes from the master branch.
+[github]
+	user = chilicuil
