--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,7 @@
         #Hostname github.com
         #PreferredAuthentications publickey
         #IdentityFile /home/chilicuil/.ssh/id_dsa.git
+ServerAliveInterval 5 
 
 Host buzz
 	Port 1003
