Changes to .alias.linux, .i3/config.4 & .irssi/config
    .alias.linux:
        added python brew vars
    .i3/config
        added altgr-v shortcut and cleanup
    .irssi/config
        removed #ubuntu-packaging

--- a/.irssi/config
+++ b/.irssi/config
@@ -62,7 +62,7 @@ channels = (
   #{ name = "#metasploit"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-meeting"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-locoteams"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-devel"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-motu"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-testing"; chatnet = "fn"; autojoin = "Yes"; },
