.irssi/config #ubuntu-quality silence

--- a/.irssi/config
+++ b/.irssi/config
@@ -65,7 +65,7 @@ channels = (
   #{ name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-devel"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-motu"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-testing"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-quality"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs-announce"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-beginners"; chatnet = "fn"; autojoin = "Yes"; },
@@ -140,6 +140,7 @@ ignores = (
       "#ubuntu-beginners",
       "#ubuntu-beginners-team",
       "#ubuntu-server",
+      "#ubuntu-quality",
       "##networking",
       "#ubuntu",
       "#ubuntu-bugs-announce",
