--- a/.irssi/config
+++ b/.irssi/config
@@ -109,11 +109,7 @@ channels = (
   { name = "##english-br"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "##espanol-br"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-mx"; chatnet = "fn"; autojoin = "Yes"; },
-  { 
-    name = "#ubuntu-community-team";
-    chatnet = "fn";
-    autojoin = "Yes";
-  },
+  { name = "#ubuntu-community-team"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#debian-ubuntu"; chatnet = "deb"; autojoin = "Yes"; },
   { name = "#debian-devel"; chatnet = "deb"; autojoin = "Yes"; },
   #{ name = "#opmexico"; chatnet = "an"; autojoin = "Yes"; },
