cleanup, vim skeletons

--- a/.irssi/config
+++ b/.irssi/config
@@ -16,21 +16,6 @@ servers = (
     nick = "chilicuil";
     password = "159263";
   },
-  #{
-  #address = "im.bitlbee.org";
-  #address = "testing.bitlbee.org";
-  #chatnet = "im";
-  #port = "6667";
-  #autoconnect = "yes";
-  #nick = "chilicuil";
-  #},
-  #{
-  #address = "irc.twice-irc.de";
-  #chatnet = "tw";
-  #port = "6667";
-  #autoconnect = "yes";
-  #nick = "chilicuil";
-  #},
   {
     address = "irc.debian.org";
     chatnet = "deb";
@@ -38,6 +23,20 @@ servers = (
     autoconnect = "yes";
     nick = "chilicuil";
   },
+  {
+    address = "testing.bitlbee.org";
+    chatnet = "im";
+    port = "6667";
+    autoconnect = "yes";
+    nick = "chilicuil";
+  }
+  #{
+  #address = "irc.twice-irc.de";
+  #chatnet = "tw";
+  #port = "6667";
+  #autoconnect = "yes";
+  #nick = "chilicuil";
+  #},
   #{
   #address = "irc.power2all.com";
   #chatnet = "an";
@@ -49,10 +48,7 @@ servers = (
 
 chatnets = {
   fn = { type = "IRC"; autosendcmd = "wait 2000; /window down"; };
-  #im = {
-  #type = "IRC";
-  #autosendcmd = "wait 1000; /msg &bitlbee identify just4fun";
-  #};
+  im = { type = "IRC"; autosendcmd = "wait 1000; /msg &bitlbee identify just4fun"; };
   #tw = { type = "IRC"; };
   #an = { type = "IRC"; };
   deb = { type = "IRC"; };
@@ -388,4 +384,3 @@ logs = { };
 #======================================
 #=============== [dcc] ================
 #======================================
-
