--- a/.irssi/config
+++ b/.irssi/config
@@ -67,6 +67,7 @@ channels = (
   #{ name = "#ubuntu-meeting"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-locoteams"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-touch"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-devel"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-motu"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-quality"; chatnet = "fn"; autojoin = "Yes"; },
@@ -102,7 +103,7 @@ channels = (
   #{ name = "#ugj-mx-doc"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#fel-clan"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#i3"; chatnet = "tw"; autojoin = "Yes"; },
-  { name = "##english-br"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "##english-br"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "##espanol-br"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-mx"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-community-team"; chatnet = "fn"; autojoin = "Yes"; },
@@ -121,6 +122,7 @@ ignores = (
       "#bash",
       "#debian-es",
       "#debian-ubuntu",
+      "#ubuntu-touch",
       "#debian-devel",
       "#debian",
       "#e",
