Add pagekite support, ssh.x alias, X11 fast forwarding

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,17 +1,14 @@
-#Host github.com
-        #User git
-        #Hostname github.com
-        #PreferredAuthentications publickey
-        #IdentityFile /home/chilicuil/.ssh/id_dsa.git
-ServerAliveInterval 5 
+ServerAliveInterval 5
 
 Host buzz
-	Port 1003
-	#LocalCommand echo buzz
-	#PermitLocalCommand yes
+    Port 1003
+    #LocalCommand echo buzz
+    #PermitLocalCommand yes
 
-Host mater
-    Port 22
+Host *.pagekite.me
+    CheckHostIP no
+    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host ndia
-    Port 1001
+Host home.javier.io
+    CheckHostIP no
+    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
