adds mutt config

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 .sxiv
 .remmina
 .adobe
-.adr
 .alien-arena
 .appletviewer
 .aptitude
@@ -30,7 +29,6 @@
 .blender
 .bluefish
 .boumlrc
-bundle
 .byobu
 .bzr.log
 .cache
@@ -40,13 +38,11 @@ bundle
 .compiz
 .com.zerog.registry.xml
 .config
-.cosa
 .covers
 .ctags
 .ctrlp_cache
 .cups
 .cvspass
-.dan
 .dbus
 .ddd
 .diffuse
@@ -81,6 +77,25 @@ bundle
 .FontForge
 .freemind
 .frostwire*
+.NERDTreeBookmarks
+.android
+.bazaar
+.cccache/
+.et_patterns_remove
+.ghc
+.gist-vim
+.goobook_cache
+.icedtea/
+.irssi/config.autosave
+.lastpass
+.lighttable/
+.m2
+.pip
+.processing
+.pythonbrew/
+.ssh/known_hosts.old
+.vim/bundle/
+.vim/spell/
 .galculator
 .gconf*
 .gconfd
@@ -111,8 +126,6 @@ bundle
 .i3/logfile
 .ICEauthority
 .icons
-.img
-.img*
 .irssi/away.log
 .irssi.logs
 .isomaster
@@ -146,7 +159,6 @@ bundle
 .mp3blaster
 .mplayer
 .msf*
-.mutt/accounts
 .mutt/cache/
 .mutt/certificates
 .mysql*
@@ -166,12 +178,10 @@ bundle
 .openoffice.org
 .packages.list
 .pan2
-.pass
 .pentadac*
 .pgadmin3
 .pgpass
 .icedteaplugin
-.pagekite.rc
 .magnifier.ini
 .gtk-recordmydesktop
 .pida*
@@ -224,7 +234,6 @@ bundle
 .translate_toolkit
 .tsclient
 .tucan
-.ubuntu-r
 .update-*
 .vagalume
 .viminf*
