--- a/.irssi/config
+++ b/.irssi/config
@@ -64,7 +64,8 @@ channels = (
   #{ name = "#openbsd"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#vim"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#metasploit"; chatnet = "fn"; autojoin = "Yes"; },
-  #{ name = "#ubuntu-meeting"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-meeting"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-rmb"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-locoteams"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-touch"; chatnet = "fn"; autojoin = "Yes"; },
@@ -141,6 +142,7 @@ ignores = (
       "#ubuntu-br",
       "##ubuntu-br-offtopic",
       "#ubuntu-meeting",
+      "#ubuntu-rmb",
       "#ubuntu-motu",
       "#ubuntu-testing",
       "#ubuntu-reviews",
