vimrc: remove non essential plugins

--- a/.gitignore
+++ b/.gitignore
@@ -11,30 +11,20 @@
 .adobe
 .alien-arena
 .appletviewer
-.aptitude
-.apvlvinfo
 .asadmin*
 .asoundrc*
 .aspell.*
-.assaultcube*
-.audacity*
 .bashdb*
 .bash_eternal_history
 .bash_history
-.B.blend
-.BillardGL.conf.v7
 .bin
-.Bitch*
 .bittorrent
-.blender
-.bluefish
 .boumlrc
 .byobu
 .bzr.log
 .cache
 .ccache*
 .checkbox
-.chmsee
 .compiz
 .com.zerog.registry.xml
 .config
@@ -51,18 +41,11 @@
 .dmrc
 .DownloadManager
 .dreampie
-.dropbox
-.dvdcss
 .dynamag
 .e
-.e.*
 .easy_e17.conf*
-.eboard
-.ecomp
-.ecore
-.elinks
+.mcore
 .enna
-.esd_auth
 .exaile
 .exchange
 .fehbg
@@ -71,12 +54,8 @@
 .fgfs
 .filezilla
 .flrec
-.fltk
 .font*
 .fontconfig
-.FontForge
-.freemind
-.frostwire*
 .NERDTreeBookmarks
 .android
 .bazaar
@@ -88,7 +67,6 @@
 .icedtea/
 .irssi/config.autosave
 .lastpass
-.lighttable/
 .m2
 .pip
 .processing
@@ -96,10 +74,8 @@
 .ssh/known_hosts.old
 .vim/bundle/
 .vim/spell/
-.galculator
 .gconf*
 .gconfd
-.gecavi
 .gegl*
 .gem
 .gerbview
@@ -128,15 +104,12 @@
 .icons
 .irssi/away.log
 .irssi.logs
-.isomaster
 .jackdrc
 .jagex*
 .java
 .jigl
 .jmol
-.kchmviewer
-.kde*
-.keysnail.tb.js
+.meysnail.tb.js
 .kicad
 .last_backup
 .launchpadlib
@@ -209,8 +182,6 @@
 .sjeng
 .sjphone
 .skel
-.Skype
-.softmaker
 .ssh/authorized_keys
 .ssh/id*
 .ssh/known_hosts
