ssh/config update config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,10 @@
-ServerAliveInterval 5
+Host *
+    #use my local keys on remote machines
+    ForwardAgent yes
+    #keep the connection alive for finnecky servers, and kill it when the
+    #connection has died
+    ServerAliveInterval 15
+    ServerAliveCountMax 3
 
 Host buzz
     Port 1003
@@ -10,5 +16,9 @@ Host *.pagekite.me
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
 Host home.javier.io
+    CheckHostIP no
+    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
+
+Host h.javier.io
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
