--- a/.config/Trolltech.conf
+++ b/.config/Trolltech.conf
@@ -1,23 +1,23 @@
 [Qt%20Plugin%20Cache%204.8.false]
-usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqgif.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqico.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
-usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
+usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqgif.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqico.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
+usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:50
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
 usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-02-06T13:28:30
 
 [Qt%20Factory%20Cache%204.8]
-com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2013-02-06T13:28:30, imsw-multi
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqgif.so=2013-02-06T13:28:30, gif
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqico.so=2013-02-06T13:28:30, ico
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=2013-02-06T13:28:30, jpeg, jpg
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=2013-02-06T13:28:30, mng
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=2013-02-06T13:28:30, tga
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2013-02-06T13:28:30, tiff, tif
+com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2013-12-11T19:18:50, imsw-multi
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqgif.so=2013-12-11T19:18:50, gif
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqico.so=2013-12-11T19:18:50, ico
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=2013-12-11T19:18:50, jpeg, jpg
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=2013-12-11T19:18:50, mng
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=2013-12-11T19:18:50, tga
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2013-12-11T19:18:50, tiff, tif
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=2013-02-06T13:28:30, connman
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=2013-02-06T13:28:30, generic
 com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=2013-02-06T13:28:30, networkmanager
@@ -58,4 +58,4 @@ customColors\12=4294967295
 customColors\13=4294967295
 customColors\14=4294967295
 customColors\15=4294967295
-filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\x16\x66ile:///home/chilicuil\0\0\0\x6\0\0\0x\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x32\0.\0\x30\0\x34\0/\0i\0s\0o\0s\0/\0u\0\x62\0u\0n\0t\0u\0\0\0j\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x33\0.\0\x31\0\x30\0/\0i\0s\0o\0s\0\0\0j\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x33\0-\0\x30\0\x34\0/\0i\0s\0o\0s\0\0\0\x1e\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0\0\0\x30\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0i\0s\0o\0\0\0n\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0/\0w\0i\0n\0\x64\0o\0w\0s\0/\0w\0i\0n\0_\0x\0p\0\0\0n\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0/\0w\0i\0n\0\x64\0o\0w\0s\0/\0w\0i\0n\0_\0x\0p\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x1)
+filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\x16\x66ile:///home/chilicuil\0\0\0\x6\0\0\0j\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x33\0-\0\x30\0\x34\0/\0i\0s\0o\0s\0\0\0\x1e\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0\0\0\x30\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0i\0s\0o\0\0\0n\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0/\0w\0i\0n\0\x64\0o\0w\0s\0/\0w\0i\0n\0_\0x\0p\0\0\0P\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0\0\0x\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x32\0.\0\x30\0\x34\0/\0i\0s\0o\0s\0/\0u\0\x62\0u\0n\0t\0u\0\0\0x\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x32\0.\0\x30\0\x34\0/\0i\0s\0o\0s\0/\0u\0\x62\0u\0n\0t\0u\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x1)
