vim: make tabs to be 2 spaces on html/php files

--- a/.ssh/config
+++ b/.ssh/config
@@ -22,3 +22,6 @@ Host home.javier.io
 Host h.javier.io
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
+
+Host bitbucket.org
+    IdentityFile ~/.ssh/correo.io.id_rsa
